@@ -4,6 +4,7 @@ owncloud-news (1.401)
 * Possible backwards incompatible change by using the link provided by simplepie instead of the user for the url hash. This prevents duplication of the feed when adding a slightly different feed url which points to the same feed and allows a speedup from O(n) to O(1) for article enhanchers
 * Add an option route for the API which handles the CORS headers to allow webapplications to access the API
 * Also allow youtube and vimeo embeds that start with // and https:// instead of only allowing http
+* ownCloud 6 compability fixes
 
 owncloud-news (1.206)
 * Also handle URLErrors in updater script that are thrown when the domain of a feed is not found
